--- a/index.html
+++ b/index.html
@@ -1,22 +1,111 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>西蒙的前端作品</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen">
-
+    <link rel="stylesheet" type="text/css" href="styles/reset.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="styles/main.css" media="screen">
   </head>
   <body>
+    <div class="wrap shadow">
+        <ol id="ol" class="list">
+        </ol>
+    </div>
     <script type="text/javascript">
-        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-        try {
-            var pageTracker = _gat._getTracker("CH-151031-01");
-            pageTracker._trackPageview();
-        } catch(err) {}
+    var str = '';
+    var data = [
+            [
+                { title : '第一章 原生JavaScript Demo part1'},
+                { url : 'html/part1/lesson1_1.html', title : '控制div属性' },
+                { url : 'html/part1/lesson1_2.html', title : '网页换肤' },
+                { url : 'html/part1/lesson1_3.html', title : '函数接收参数并弹出' },
+                { url : 'html/part1/lesson1_4.html', title : '用循环改变div颜色' },
+                { url : 'html/part1/lesson1_5.html', title : '鼠标移入移出改变样式' },
+                { url : 'html/part1/lesson1_6.html', title : '记住密码提示框' }
+            ],
+            [
+                { title : '第二章 原生JavaScript Demo part2'},
+                { url : 'html/part2/lesson2_1.html', title : '输入法' },
+                { url : 'html/part2/lesson2_2.html', title : '点击div，显示其innerHTML' },
+                { url : 'html/part2/lesson2_3.html', title : '求出数组中所有数字的和' },
+                { url : 'html/part2/lesson2_4.html', title : '弹出层效果' },
+                { url : 'html/part2/lesson2_5.html', title : '函数传参，改变div属性' },
+                { url : 'html/part2/lesson2_6.html', title : '图片列表：移入移出改变图片透明度' },
+                { url : 'html/part2/lesson2_7.html', title : '简易版选项卡' },
+                { url : 'html/part2/lesson2_8.html', title : '简易版JS年历' },
+                { url : 'html/part2/lesson2_9.html', title : '播放列表的收缩' },
+                { url : 'html/part2/lesson2_10.html', title : '提示框效果' },
+                { url : 'html/part2/lesson2_11.html', title : '鼠标移过，改变图片路径' },
+                { url : 'html/part2/lesson2_12.html', title : '复选框' }
+            ],
+            [
+                { title : '第三章 原生JavaScript Demo part3'},
+                { url : 'html/part3/lesson3_1.html', title : '用typeof查看数据类型' },
+                { url : 'html/part3/lesson3_2.html', title : '用parseInt解析数字并求和' },
+                { url : 'html/part3/lesson3_3.html', title : '累加按钮' },
+                { url : 'html/part3/lesson3_4.html', title : '输入数字，比较大小' },
+                { url : 'html/part3/lesson3_5.html', title : '页面加载后累加' },
+                { url : 'html/part3/lesson3_6.html', title : '判断数字是否为两位数' },
+                { url : 'html/part3/lesson3_7.html', title : '网页计算器' },
+                { url : 'html/part3/lesson3_8.html', title : '简易版网页时钟' },
+                { url : 'html/part3/lesson3_9.html', title : '倒计时时钟' }
+            ],
+            [
+                { title : '第四章 原生JavaScript Demo part4'},
+                { url : 'html/part4/lesson4_1.html', title : 'setTimeout应用' },
+                { url : 'html/part4/lesson4_2.html', title : '轮播头图' },
+                { url : 'html/part4/lesson4_3.html', title : '轮播头图-改变方向' },
+                { url : 'html/part4/lesson4_4.html', title : 'arguments应用-求出函数参数的总和' },
+                { url : 'html/part4/lesson4_5.html', title : 'CSS函数-设置/读取对象属性' },
+                { url : 'html/part4/lesson4_6.html', title : '当前输入框高亮' },
+                { url : 'html/part4/lesson4_7.html', title : '数组练习：各种数组方法的使用' },
+                { url : 'html/part4/lesson4_8.html', title : '试件练习：封装兼容性添加、删除事件' },
+                { url : 'html/part4/lesson4_9.html', title : '星级评分系统' }
+            ],
+            [
+                { title : '第五章 京东JD.com 仿站'},
+                { url : 'slide/01/index.html', title : '京东JD.com 首页模仿' },
+            ]
+        ];
+    for(var i = 0; i < data.length; i++){
+        var items = data[i];
+        var sub = '';
+        for(var j=0; j<items.length; j++){
+            var son = items[j];
+            if(j == 0){
+                sub += '<li><h1><a href="javascript:;" title="' + son.title + '">' + son.title + '</a></h1><dl class="sub-dl">';
+            } else {
+                sub += '<dd><a href="' + son.url + '" target="_blank" title="' + son.title + '">' + son.title + '</a></dd>';
+            }
+            if(j == items.length - 1){
+                sub += '</dl></li>';
+            }
+        }
+        str += sub;
+    }
+    var ol = document.getElementById('ol');
+    ol.innerHTML = str;
+    var h1 = ol.getElementsByTagName('h1');
+    var dl = ol.getElementsByTagName('dl');
+    var tmp = -1;
+    var open = false;
+    for(var i=0; i < h1.length; i++){
+        h1[i].index = i;
+        h1[i].onclick = function(){
+            for(var i=0; i<h1.length; i++){
+                dl[i].style.display = 'none';
+            }
+            if(tmp == this.index && open){
+                dl[this.index].style.display = 'none';
+                open = false;
+            } else {
+                dl[this.index].style.display = 'block';
+                open = true;
+            }
+            tmp = this.index;
+        }
+    }
     </script>
   </body>
 </html>
