--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <ol id="ol" class="list">
         </ol>
     </div>
+    <div class="welcome">
+        By simonlau  欢迎交流 Email: simon_ryan@163.com  QQ：1146855071
+    </div>
     <script type="text/javascript">
     var str = '';
     var data = [
