--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             ],
             [
                 { title : '第五章 京东JD.com 仿站'},
-                { url : 'building.html', title : '京东JD.com 首页模仿' },
+                { url : 'html/part5/index.html', title : '京东JD.com 首页模仿' },
             ]
         ];
     for(var i = 0; i < data.length; i++){
