--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             [
                 { title : '第五章 京东JD.com 仿站'},
                 { url : 'html/part5/index.html', title : '京东JD.com 首页模仿' },
+            ],
+            [
+                { title : '第六章 网站首页风格'},
+                { url : 'html/part6/sroll.html', title : '厅客首页 全屏滚动' },
             ]
         ];
     for(var i = 0; i < data.length; i++){
