--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="welcome">
         By simonlau  欢迎交流 Email: simon_ryan@163.com  QQ：1146855071
     </div>
+    <audio class="audio" src="images/bgm.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
     <script type="text/javascript">
     var str = '';
     var data = [
@@ -25,7 +26,8 @@
                 { url : 'html/part1/lesson1_3.html', title : '函数接收参数并弹出' },
                 { url : 'html/part1/lesson1_4.html', title : '用循环改变div颜色' },
                 { url : 'html/part1/lesson1_5.html', title : '鼠标移入移出改变样式' },
-                { url : 'html/part1/lesson1_6.html', title : '记住密码提示框' }
+                { url : 'html/part1/lesson1_6.html', title : '记住密码提示框' },
+                { url : 'html/part1/lesson1_7.html', title : '获取鼠标坐标' }
             ],
             [
                 { title : '第二章 原生JavaScript Demo part2'},
