--- a/html/part5/index.html
+++ b/html/part5/index.html
@@ -49,7 +49,7 @@
     <div id="logo"><a href="http://www.jd.com" class="logo"></a></div>
     <div id="search">
       <div class="form">
-        <input type="text" class="text" value="小米手机">
+        <input type="text" class="text" id="search_text" value="小米手机">
         <input type="button" class="button" value="搜索">
       </div>
     </div>
