--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="welcome">
         By simonlau  欢迎交流 Email: simon_ryan@163.com  QQ：1146855071
     </div>
-    <audio class="audio" src="images/bgm.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
+    <!-- <audio class="audio" src="images/bgm.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio> -->
     <script type="text/javascript">
     var str = '';
     var data = [
