--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </ol>
     </div>
     <div class="welcome">
-        By simonlau  欢迎交流 Email: simon_ryan@163.com  QQ：1146855071
+        © 2015 Powered by simonlau  欢迎交流 Email: simon_ryan@163.com  QQ：1146855071
     </div>
     <!-- <audio class="audio" src="images/bgm.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio> -->
     <script type="text/javascript">
@@ -75,6 +75,10 @@
             [
                 { title : '第六章 网站首页风格'},
                 { url : 'html/part6/sroll.html', title : '厅客首页 全屏滚动' },
+            ],
+            [
+                { title : '第七章 网站界面收集'},
+                { url : 'html/part7/login.html', title : '经典黑色界面 from豪情' },
             ]
         ];
     for(var i = 0; i < data.length; i++){
