--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 { url : 'html/part1/lesson1_4.html', title : '用循环改变div颜色' },
                 { url : 'html/part1/lesson1_5.html', title : '鼠标移入移出改变样式' },
                 { url : 'html/part1/lesson1_6.html', title : '记住密码提示框' },
-                { url : 'html/part1/lesson1_7.html', title : '获取鼠标坐标' }
+                { url : 'html/part1/lesson1_7.html', title : '获取鼠标坐标' },
+                { url : 'html/part1/lesson1_8.html', title : '单独图片轮换' },
+                { url : 'html/part1/lesson1_9.html', title : '有焦点时文字变淡' }
             ],
             [
                 { title : '第二章 原生JavaScript Demo part2'},
@@ -73,11 +75,12 @@
                 { url : 'html/part5/index.html', title : '京东JD.com 首页模仿' },
             ],
             [
-                { title : '第六章 网站首页风格'},
-                { url : 'html/part6/sroll.html', title : '厅客首页 全屏滚动' },
+                { title : '第六章 网页风格'},
+                { url : 'html/part6/fullscreen-sroll.html', title : '厅客首页 全屏滚动' },
+                { url : 'html/part6/bar-scroll.html',       title : '滚动菜单标记' }
             ],
             [
-                { title : '第七章 网站界面收集'},
+                { title : '第七章 网站界面风格'},
                 { url : 'html/part7/login.html', title : '经典黑色界面 from豪情' },
             ]
         ];
