--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 { url : 'html/part3/lesson3_6.html', title : '判断数字是否为两位数' },
                 { url : 'html/part3/lesson3_7.html', title : '网页计算器' },
                 { url : 'html/part3/lesson3_8.html', title : '简易版网页时钟' },
-                { url : 'html/part3/lesson3_9.html', title : '倒计时时钟' }
+                { url : 'html/part3/lesson3_9.html', title : '倒计时时钟' },
+                { url : 'html/part3/lesson3_10.html', title : '回到顶部' }
             ],
             [
                 { title : '第四章 原生JavaScript Demo part4'},
@@ -68,16 +69,19 @@
                 { url : 'html/part4/lesson4_6.html', title : '当前输入框高亮' },
                 { url : 'html/part4/lesson4_7.html', title : '数组练习：各种数组方法的使用' },
                 { url : 'html/part4/lesson4_8.html', title : '试件练习：封装兼容性添加、删除事件' },
-                { url : 'html/part4/lesson4_9.html', title : '星级评分系统' }
+                { url : 'html/part4/lesson4_9.html', title : '星级评分系统' },
+                { url : 'html/part4/lesson4_10.html', title : '模拟搜索结果项' }
             ],
             [
                 { title : '第五章 京东JD.com 仿站'},
-                { url : 'html/part5/index.html', title : '京东JD.com 首页模仿' },
+                { url : 'html/part5/index.html',    title : '京东JD.com 首页模仿' },
             ],
             [
                 { title : '第六章 网页风格'},
                 { url : 'html/part6/fullscreen-sroll.html', title : '厅客首页 全屏滚动' },
-                { url : 'html/part6/bar-scroll.html',       title : '滚动菜单标记' }
+                { url : 'html/part6/bar-scroll.html',       title : '滚动菜单标记' },
+                { url : 'html/part6/secondary-menu.html',   title : '二级下拉菜单' },
+                { url : 'html/part6/weibo.html',            title : '微博 (左图右文&微博置顶)' }
             ],
             [
                 { title : '第七章 网站界面风格'},
