--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 { url : 'html/part3/lesson3_7.html', title : '网页计算器' },
                 { url : 'html/part3/lesson3_8.html', title : '简易版网页时钟' },
                 { url : 'html/part3/lesson3_9.html', title : '倒计时时钟' },
-                { url : 'html/part3/lesson3_10.html', title : '回到顶部' }
+                { url : 'html/part3/lesson3_10.html', title : '回到顶部' },
+                { url : 'html/part3/lesson3_11.html', title : '数字倒数效果' }
             ],
             [
                 { title : '第四章 原生JavaScript Demo part4'},
