--- a/html/part7/login.html
+++ b/html/part7/login.html
@@ -10,7 +10,7 @@
     <h1>后台管理登录</h1>
     <div class="adming_login_border">
         <div class="admin_input">
-            <form action="index.html" method="post">
+            <form action="./index.html" method="post">
                 <ul class="admin_items">
                     <li>
                         <label for="user">用户名：</label>
