--- a/html/part2/lesson2_7.html
+++ b/html/part2/lesson2_7.html
@@ -18,7 +18,7 @@
 		#tab{
 			background: #000;
 			border:1px solid #000;
-			overflow: hidden;   //重要！
+			overflow: hidden;
 		}
 		#tab li{
 			float: left;
