--- a/html/part1/lesson1_2.html
+++ b/html/part1/lesson1_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>网页换肤</title>
@@ -42,7 +42,6 @@
 			height: 6px;
 			cursor: pointer;
 			overflow: hidden;
-			text-indent: -9999px;
 			margin-right: 10px;
 			border-width: 4px;
 			border-style: solid;
