--- a/html/part6/bar-scroll.html
+++ b/html/part6/bar-scroll.html
@@ -2,41 +2,187 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>滚动菜单标记</title>
-    <style type="text/css">
-        *{ margin:0; padding:0;}
-        body{font:12px/1.5 arial;background: #fff;}
-        ul,li{list-style: none;}
-        a{ color:#666; text-decoration:none;}
-        a:hover{ color:#f80;}
-        .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
-        .clearfix{display:inline-block;}
-        .clearfix{display:block;}
-        .content{ width:980px;margin: 0 auto;}
-        .sidebar{ position:fixed; float:left; width:240px; z-index:5;}
-        .list{background: #fcfcfc; border:1px solid #c6c6c6;}
-        .list li{ padding-left:10px; height:40px; line-height:40px;cursor: pointer;border-bottom: 1px solid #ebebeb;}
-        .list li.on{ position:relative; padding:2px 0 2px 10px; margin:-2px 0 2px -1px;background: #70a9d9;}
-        .list li.on i{ position:absolute; width:0; height:0;top: 0; right:-15px; overflow:hidden; display:block;border-color:transparent #70A9D9;border-style:solid;border-width:22px 0 22px 15px;}
-        .list li.on a{color: #fff; font-weight:bold;}
-        .list li a{ font-size:14px;}
-        .main{ float:right; width:728px; border:1px solid #c6c6c6;}
-        .main h1{ height:57px; line-height:57px; font-size:27px; color:#333; text-align:center;box-shadow:0 -1px 0 #fff inset;border-bottom: 1px solid #c6c6c6; background:-webkit-linear-gradient(center top , #FFFFFF, #F1F1F1) repeat 0 0;background:-moz-linear-gradient(center top , #FFFFFF, #F1F1F1) repeat 0 0;}
-        .report-img-box{ position:relative;border-bottom: 1px solid #ccc;}
-        .report-desc3{ padding:20px 50px; line-height:20px; height:100%; color:#666; border:20px solid #fff;background: #f5f5f5;}
-        .report-desc3 h4{ font-size:22px; color:#333;}
-        .report-desc3 li{ padding:20px 0; clear:both;}
-        .report-desc3 dt{ position:relative; width:90px; text-align:center; line-height:22px; font-size:18px; font-family:微软雅黑; font-weight:normal; float:left;color: #fff;}
-        .report-desc3 dt i{ position:absolute; width:0;right: 0; overflow:hidden; height:0;bottom: 0; border-width:20px 20px 0 0;border-style:solid;border-color:transparent #F5F5F5;}
-        .report-desc3 dd{ float:left; width:460px; padding:10px 0 10px 20px;}
-        .main .report-img-box{ position:relative; width:728px; padding:20px 0 30px; height:405px; overflow:hidden;border-bottom: 1px solid #ccc;}
-        .main .report-img-box img { clip:rect(100px, 728px, 475px, 0px); position:absolute; top:-40px; width:728px; }
-        .report-img-box h4{ position:absolute; top:30px; left:18px; font-size:18px; font-weight:bold;}
-        .report-desc22,.report-desc23{ position:absolute; padding:0 70px; line-height:20px; color:#666;background: #fff;}
-        .report-desc22 dt{ font-style:14; line-height:26px; margin-top:10px; font-weight:bold;}
-        .report-desc23 li{ padding-bottom:10px;}
-    </style>
+<meta charset="UTF-8" />
+<title>滚动菜单标记</title>
+<style type="text/css">
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font: 12px/1.5 arial;
+    background: #fff;
+}
+ul, li {
+    list-style: none;
+}
+a {
+    color: #666;
+    text-decoration: none;
+}
+a:hover {
+    color: #f80;
+}
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.clearfix {
+    display: inline-block;
+}
+.clearfix {
+    display: block;
+}
+.content {
+    width: 980px;
+    margin: 0 auto;
+}
+.sidebar {
+    position: fixed;
+    float: left;
+    width: 240px;
+    z-index: 5;
+}
+.list {
+    background: #fcfcfc;
+    border: 1px solid #c6c6c6;
+}
+.list li {
+    padding-left: 10px;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    border-bottom: 1px solid #ebebeb;
+}
+.list li.on {
+    position: relative;
+    padding: 2px 0 2px 10px;
+    margin: -2px 0 2px -1px;
+    background: #70a9d9;
+}
+.list li.on i {
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 0;
+    right: -15px;
+    overflow: hidden;
+    display: block;
+    border-color: transparent #70A9D9;
+    border-style: solid;
+    border-width: 22px 0 22px 15px;
+}
+.list li.on a {
+    color: #fff;
+    font-weight: bold;
+}
+.list li a {
+    font-size: 14px;
+}
+.main {
+    float: right;
+    width: 728px;
+    border: 1px solid #c6c6c6;
+}
+.main h1 {
+    height: 57px;
+    line-height: 57px;
+    font-size: 27px;
+    color: #333;
+    text-align: center;
+    box-shadow: 0 -1px 0 #fff inset;
+    border-bottom: 1px solid #c6c6c6;
+    background: -webkit-linear-gradient(center top, #FFFFFF, #F1F1F1) repeat 0 0;
+    background: -moz-linear-gradient(center top, #FFFFFF, #F1F1F1) repeat 0 0;
+}
+.report-img-box {
+    position: relative;
+    border-bottom: 1px solid #ccc;
+}
+.report-desc3 {
+    padding: 20px 50px;
+    line-height: 20px;
+    height: 100%;
+    color: #666;
+    border: 20px solid #fff;
+    background: #f5f5f5;
+}
+.report-desc3 h4 {
+    font-size: 22px;
+    color: #333;
+}
+.report-desc3 li {
+    padding: 20px 0;
+    clear: both;
+}
+.report-desc3 dt {
+    position: relative;
+    width: 90px;
+    text-align: center;
+    line-height: 22px;
+    font-size: 18px;
+    font-family: 微软雅黑;
+    font-weight: normal;
+    float: left;
+    color: #fff;
+}
+.report-desc3 dt i {
+    position: absolute;
+    width: 0;
+    right: 0;
+    overflow: hidden;
+    height: 0;
+    bottom: 0;
+    border-width: 20px 20px 0 0;
+    border-style: solid;
+    border-color: transparent #F5F5F5;
+}
+.report-desc3 dd {
+    float: left;
+    width: 460px;
+    padding: 10px 0 10px 20px;
+}
+.main .report-img-box {
+    position: relative;
+    width: 728px;
+    padding: 20px 0 30px;
+    height: 405px;
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+}
+.main .report-img-box img {
+    clip: rect(100px, 728px, 475px, 0px);
+    position: absolute;
+    top: -40px;
+    width: 728px;
+}
+.report-img-box h4 {
+    position: absolute;
+    top: 30px;
+    left: 18px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.report-desc22, .report-desc23 {
+    position: absolute;
+    padding: 0 70px;
+    line-height: 20px;
+    color: #666;
+    background: #fff;
+}
+.report-desc22 dt {
+    font-style: 14;
+    line-height: 26px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+.report-desc23 li {
+    padding-bottom: 10px;
+}
+</style>
 </head>
 <body>
 <!--<div id="test" style="position: fixed;left: 10px;top: 10px;width: 80px;height: 200px;overflow-y:scroll;border: 1px solid #ccc;"></div>-->
