--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrap shadow">
         <ol id="ol" class="list">
         </ol>
-        <span>预览版</span>
+        <span>进入预览模式</span>
     </div>
     <div class="shadow" id="showDemo">
         <iframe src="" name="view_frame" width="100%" height="100%" scrolling="auto" frameborder="0"></iframe>
@@ -114,7 +114,7 @@
         }
         str += sub;
     }
-    //预览版
+    //预览模式
     var oShowDiv = document.getElementById("showDemo");
     var oiframe = oShowDiv.getElementsByTagName("iframe")[0];
     var ol = document.getElementById('ol');
