--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link id="maincss" rel="stylesheet" type="text/css" href="styles/main.css" media="only screen and (min-width:1200px)">
     <link rel="stylesheet" type="text/css" href="styles/main-minwidth1200.css" media="only screen and (max-width:1200px)">
     <link rel="stylesheet" type="text/css" href="styles/main-minwidth700.css" media="only screen and (max-width:700px)">
+    <link rel="stylesheet" type="text/css" href="jquery-2.1.3.js">
   </head>
   <body>
     <div class="wrap shadow">
