--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 { url : 'html/part4/lesson4_7.html', title : '数组练习：各种数组方法的使用' },
                 { url : 'html/part4/lesson4_8.html', title : '试件练习：封装兼容性添加、删除事件' },
                 { url : 'html/part4/lesson4_9.html', title : '星级评分系统' },
-                { url : 'html/part4/lesson4_10.html', title : '模拟搜索结果项' }
+                { url : 'html/part4/lesson4_10.html', title : '模拟搜索结果项' },
+                { url : 'html/part4/lesson4_11.html', title : 'HTML5 拖拽图片' }
             ],
             [
                 { title : '第5章 京东JD.com 仿站'},
@@ -87,7 +88,8 @@
                 { url : 'html/part6/fullscreen-sroll.html', title : '厅客首页 全屏滚动' },
                 { url : 'html/part6/bar-scroll.html',       title : '滚动菜单标记' },
                 { url : 'html/part6/secondary-menu.html',   title : '二级下拉菜单' },
-                { url : 'html/part6/weibo.html',            title : '微博 (左图右文&微博置顶)' }
+                { url : 'html/part6/weibo.html',            title : '微博 (左图右文&微博置顶)' },
+                { url : 'html/part6/圣杯布局.html',            title : '圣杯布局' }
             ],
             [
                 { title : '第7章 网站界面风格'},
