--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>西蒙的前端作品</title>
+    <title>西蒙的前端作品 by simonlau</title>
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <link rel="stylesheet" type="text/css" href="styles/reset.css" media="screen">
     <link id="maincss" rel="stylesheet" type="text/css" href="styles/main.css" media="only screen and (min-width:1200px)">
