--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             [
                 { title : '第8章 其他'},
                 { url : 'html/part8/lesson8-1.html', title : 'CSS动画-旋转的盒子' }
+            ],
+            [
+                { title : '第9章 demo'},
+                { url : 'lucky-card-master/demo.html', title : '刮刮卡' }
             ]
 
         ];
