添加 刮刮乐

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             ],
             [
                 { title : '第9章 demo'},
-                { url : 'lucky-card-master/demo.html', title : '刮刮卡' }
+                { url : 'lucky-card-master/demo.html', title : '刮刮卡' },
+                { url : 'jQuery.eraser-master/index.html', title : '刮刮乐' }
             ]
 
         ];
