--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             {title: '第9章 demo'},
             {url: 'lucky-card-master/demo.html', title: '刮刮卡'},
             {url: 'jQuery.eraser-master/index.html', title: '刮刮乐'},
-            {url: 'html/index.html', title: '深圳市东恒盛投资集团'}
+            {url: 'html/index.html', title: '东恒盛'}
         ]
 
     ];
