--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         ],
         [
             {title: '第8章 其他'},
-            {url: 'html/part8/lesson8-1.html', title: 'CSS动画-旋转的盒子'}
+            {url: 'html/part8/lesson8-1.html', title: 'CSS动画-旋转的盒子'},
+            {url: 'html/part8/lesson8-2.html', title: '弹性滚动'}
         ],
         [
             {title: '第9章 demo'},
